--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "atlasutils",
   "version": "1.1.0",
   "description": "Modules for use in Atlas node projects",
-  "main": "./dist/src/index.js",
-  "module": "./src/index.ts",
-  "types": "./src/index.d.ts",
+  "main": "./dist/lib/index.js",
+  "types": "./dist/lib/index.d.ts",
   "repository": "https://github.com/atlas-x/node-atlasutils",
   "author": "Atlas Solutions <jon@atlas-x.com>",
   "license": "MIT",
@@ -26,8 +25,8 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/jest tests",
-    "build": "tsc -p ./",
-    "start": "tsc -w -p ./",
+    "build": "tsc",
+    "start": "tsc -w",
     "prepublish": "npm run build"
   },
   "jest": {
