added transport logger instead of logger slack

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "transform": {
       "^.+\\.ts$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
+    "clearMocks": true,
     "testPathIgnorePatterns": [
       "\\node_modules\\",
       "\\dist\\"
