--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "atlasutils",
   "version": "1.0.0",
   "description": "Modules for use in Atlas node projects",
-  "main": "./dist/lib/index.js",
-  "types": "./dist/lib/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "https://github.com/atlas-x/node-atlasutils",
   "author": "Atlas Solutions <jon@atlas-x.com>",
   "license": "MIT",
