--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasutils",
-  "version": "1.1.7-1",
+  "version": "1.2.0",
   "description": "Modules for use in Atlas node projects",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -8,20 +8,20 @@
   "author": "Atlas Solutions <jon@atlas-x.com>",
   "license": "MIT",
   "dependencies": {
-    "@slack/client": "^3.13.0",
+    "@slack/client": "^4.4.0",
     "@types/winston": "^2.3.5",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "winston": "^2.3.1",
-    "winston-daily-rotate-file": "^1.5.0"
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "winston": "2.4.3",
+    "winston-daily-rotate-file": "^3.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.8",
-    "@types/node": "^8.0.28",
-    "jest": "^21.0.2",
-    "ts-jest": "^21.0.1",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.5.2"
+    "@types/jest": "^23.3.1",
+    "@types/node": "^10.7.1",
+    "jest": "^23.5.0",
+    "ts-jest": "^23.1.4",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.0.1"
   },
   "scripts": {
     "test": "./node_modules/.bin/jest",
@@ -31,7 +31,7 @@
   },
   "jest": {
     "transform": {
-      "^.+\\.ts$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.ts$": "ts-jest"
     },
     "clearMocks": true,
     "testPathIgnorePatterns": [
