--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": true,
     "outDir": "./dist",
     "lib":[
-      "es5", "es6", "es7"
+      "es5", "es6", "es7", "esnext.asynciterable"
     ]
   },
   "exclude": [
