--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jest": "^23.5.0",
     "ts-jest": "^23.1.4",
     "ts-node": "^7.0.1",
-    "typescript": "^3.0.1"
+    "typescript": "2.9.2"
   },
   "scripts": {
     "test": "./node_modules/.bin/jest",
