--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasutils",
-  "version": "1.2.0",
+  "version": "1.2.0-2",
   "description": "Modules for use in Atlas node projects",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
