--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasutils",
-  "version": "1.2.0-2",
+  "version": "1.3.0",
   "description": "Modules for use in Atlas node projects",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -12,6 +12,8 @@
     "@types/winston": "^2.3.5",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "morgan": "^1.9.0",
+    "split": "^1.0.1",
     "winston": "2.4.3",
     "winston-daily-rotate-file": "^3.3.2"
   },
