--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasutils",
-  "version": "1.3.1-1",
+  "version": "1.3.1-2",
   "description": "Modules for use in Atlas node projects",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -14,7 +14,7 @@
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "split": "^1.0.1",
-    "winston": "2.4.3",
+    "winston": "^2.4.4",
     "winston-daily-rotate-file": "^3.3.2"
   },
   "devDependencies": {
