--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "morgan": "^1.9.0",
     "split": "^1.0.1",
     "winston": "^2.4.4",
-    "winston-daily-rotate-file": "^3.3.2"
+    "winston-daily-rotate-file": "3.3.2"
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
