--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasutils",
-  "version": "1.3.1-3",
+  "version": "1.4",
   "description": "Modules for use in Atlas node projects",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@slack/client": "^4.4.0",
+    "@slack/web-api": "^5.0.1",
     "@types/winston": "^2.3.5",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
@@ -22,8 +23,8 @@
     "@types/node": "^10.7.1",
     "jest": "^23.5.0",
     "ts-jest": "^23.1.4",
-    "ts-node": "^7.0.1",
-    "typescript": "2.9.2"
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "test": "./node_modules/.bin/jest",
@@ -44,6 +45,7 @@
     "moduleFileExtensions": [
       "ts",
       "js"
-    ]
+    ],
+    "testEnvironment": "node"
   }
 }
