--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlasutils",
-  "version": "1.4.0-1",
+  "version": "1.5.0",
   "description": "Modules for use in Atlas node projects",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -9,9 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "@slack/client": "^4.4.0",
-    "@slack/web-api": "^5.0.1",
+    "@slack/web-api": "^5.11.0",
     "@types/winston": "^2.3.5",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.21",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "split": "^1.0.1",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
-    "@types/node": "^10.7.1",
+    "@types/node": "^10.17.18",
     "jest": "^23.5.0",
     "ts-jest": "^23.1.4",
     "ts-node": "^8.2.0",
